[tool.poetry]
name = "py2ts-generator"
version = "0.1.0"
description = "Generate TypeScript types from Python classes"
authors = ["Sandro Massa <san.massa.98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11"
ordered-set = "^4.1.0"
typing-inspect = "^0.8.0"
case-converter = "^1.1.0"
sqlalchemy = "^2.0.38"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
mypy = "^0.981"
black = "^22.8.0"
flake8 = "^5.0.4"
pytest-html = "^3.1.1"
coverage = "^6.4.4"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
